--- a/NYU.html
+++ b/NYU.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <link rel="stylesheet" type="text/css" href="WebBasicsStyle.css"/>
+        <link rel="stylesheet" type="text/css" href="WebBasicsStyle.css">
+        <title>NYU Hub
+        </title>
     </head>
     <body> 
+        <div class = "header">
+            <a href = "index.html">
+            <p>Micaela Yang's Portfolio</p>
+            </a>
+        </div>
         <h1 id=NYU>NYU</h1>
-        <h3>Types of work and what classes they were for</h3>
+        <p>Click <a href= "NYUShowcase.html">here</a> to see examples of my work from NYU</p>
+        <h3>Types of work you will find here and their associated courses</h3>
         <ul>
-            <li>Audio for video</li>
+            <li>Audio for Video
         
                 <ol>
                     <li>Audio for Video 1</li>
                     <li>Audio for Video 2</li>
                     <li>Sound Design</li>
                 </ol>
-            <br>
-            <!--I don't know if I'm going to include this in the portfolio-->
+            </li>
+            <!--I don't know if I'm going to include this in the portfolio
             <li>Analog and Digital electronics 
                 <ol>
                     <li>Analog Electronics lab
@@ -25,11 +33,19 @@
                     <li>Product Design
                     </li>
                 </ol>
+            </li> -->
+            <li> Game Design
+                <ol>
+                    <!-- not sure if I'm including this either
+                    <li> Intro to Programming for Video Games
+                    </li> -->
+                    <li>Capstone</li>
+                </ol>
             </li>
         </ul>
-        
+        <footer>
+            © Micaela Yang 2024
+        </footer>        
     </body>
-    <footer>
-        © Micaela Yang 2024
-    </footer>
+
 </html>
