--- a/PrattHub.html
+++ b/PrattHub.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <link rel="stylesheet" type="text/css" href="WebBasicsStyle.css"/>
+        <link rel="stylesheet" type="text/css" href="WebBasicsStyle.css">
+        <title>Pratt Hub
+        </title>
     </head>
     <body> 
+        <div class = "header">
+            <a href = "index.html">
+            <p>Micaela Yang's Portfolio</p>
+            </a>
+        </div> 
         <h1 id=Pratt>Pratt</h1>
         <p>I don't have very much here yet because I am still in my first semester. But you can click <a href= "index.html">here</a> to see a pretty cool website I'm making for Information Technologies</p>
         
-
+        <p>Classes I am taking this semester:</p>
+        <ol>
+            <li>Information Technologies</li>
+            <li>Knowledge Organization</li>
+            <li>Foundations of Information</li>
+        </ol>
+        
+        <footer>
+            © Micaela Yang 2024
+        </footer>
     </body>
-    <footer>
-        © Micaela Yang 2024
-    </footer>
+
 </html>
