--- a/NYUShowcase.html
+++ b/NYUShowcase.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head> 
         <link rel="stylesheet" type="text/css" href="WebBasicsStyle.css">
         <title>NYU Showcase
@@ -12,11 +12,32 @@
             </a>
         </div>
         <h1 id=NYU >NYU</h1>
-        <p>Skip to: </p>
-        <a href = "#capstone">Capstone</a> 
-        <br>
-        <a href = "#Audio4Video">Audio for Video </a>
+        <p>Skip to: <a href = "#Audio4Video">Audio for Video </a>, <a href = "#capstone">Capstone</a> </p>
                                
+        
+        <div> <!-- Audio for Video -->
+            <h2 id="Audio4Video">Audio for Video</h2> <!--I need to check copywrite info for this-->
+            <table>
+                <tr>
+                    <td rowspan="1">
+                        Sound Design Final Project
+                    </td>
+                    <td> 
+                        <figure>
+                            <video controls>
+                                <source src = "Video/SoundDesign.mp4" type = "video/mp4">
+                            </video><br> 
+                            <figcaption>
+                                Original audio. Video from the movie
+                                <em>127 Hours</em>.
+                            </figcaption>
+
+                        </figure>
+                    </td>
+                    <td>Description of assignment/methods used etc goes here. </td>
+                </tr>
+            </table>
+        </div>
         <div> <!-- Capstone -->
             <h2 id= "capstone">Capstone</h2>
 
@@ -67,28 +88,6 @@
                 </tr>
             </table>
             <br><br><br>
-        </div>
-        <div> <!-- Audio for Video -->
-            <h2 id="Audio4Video">Audio for Video</h2> <!--I need to check copywrite info for this-->
-            <table>
-                <tr>
-                    <td rowspan="1">
-                        Sound Design Final Project
-                    </td>
-                    <td> 
-                        <figure>
-                            <video controls>
-                                <source src = "Video/SoundDesign.mp4" type = "video/mp4">
-                            </video><br> 
-                            <figcaption>
-                                Original audio. Video from the movie
-                                <em>127 Hours</em>.
-                            </figcaption>
-
-                        </figure>
-                    </td>
-                </tr>
-            </table>
         </div>
         <footer>
             © Micaela Yang 2024
