--- a/PrattHub.html
+++ b/PrattHub.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head> 
         <link rel="stylesheet" type="text/css" href="WebBasicsStyle.css">
         <title>Pratt Hub
@@ -12,7 +12,7 @@
             </a>
         </div> 
         <h1 id=Pratt>Pratt</h1>
-        <p>I don't have very much here yet because I am still in my first semester. But you can click <a href= "index.html">here</a> to see a pretty cool website I'm making for Information Technologies</p>
+        <p>I don't have very much here yet because I am still in my first semester. But you can click <a href= "index.html">here</a> to see a pretty cool website I'm making for Information Technologies.</p>
         
         <p>Classes I am taking this semester:</p>
         <ol>
