--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- This is the index page for my Web Basics Project-->
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head> 
         <link rel="stylesheet" type="text/css" href="WebBasicsStyle.css">
         <title> Portfolio Homepage
