--- a/NYU.html
+++ b/NYU.html
@@ -11,7 +11,9 @@
             <p>Micaela Yang's Portfolio</p>
             </a>
         </div>
-        <h1 id=NYU>NYU</h1>
+        
+        <h1 id="NYU" class = "NYUHome"><a href= "NYU.html">NYU</a></h1>
+        
         <p>Click <a href= "NYUShowcase.html">here</a> to see examples of my work from NYU</p>
         <h3>Types of work you will find here and their associated courses</h3>
         <ul>
@@ -43,6 +45,9 @@
                 </ol>
             </li>
         </ul>
+        <div class = "navbar">
+            <p><a id="NYU" class = "NYUHome" href= "NYU.html">NYU</a> <a id="Pratt" class = "PrattHome" href= "PrattHub.html">Pratt</a> </p>
+        </div>
         <footer>
             © Micaela Yang 2024
         </footer>        
