--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <div>
             
         </div>
+        <div class = "navbar">
+            <p>Jump to: <a id="NYU" class = "NYUHome" href= "NYU.html">NYU</a>, <a id="Pratt" class = "PrattHome" href= "PrattHub.html">Pratt</a> </p>
+        </div>
         <footer>
             © Micaela Yang 2024
         </footer>
