--- a/NYUShowcase.html
+++ b/NYUShowcase.html
@@ -11,7 +11,7 @@
             <p>Micaela Yang's Portfolio</p>
             </a>
         </div>
-        <h1 id=NYU >NYU</h1>
+        <h1 id="NYU" class = "NYUHome"><a href= "NYU.html">NYU</a></h1>
         <p>Skip to: <a href = "#Audio4Video">Audio for Video </a>, <a href = "#capstone">Capstone</a> </p>
                                
         
@@ -88,6 +88,9 @@
                 </tr>
             </table>
             <br><br><br>
+        </div>
+        <div class = "navbar">
+            <p>Jump to: <a id="NYU" class = "NYUHome" href= "NYU.html">NYU</a>, <a id="Pratt" class = "PrattHome" href= "PrattHub.html">Pratt</a> </p>
         </div>
         <footer>
             © Micaela Yang 2024
