--- a/PrattHub.html
+++ b/PrattHub.html
@@ -11,7 +11,7 @@
             <p>Micaela Yang's Portfolio</p>
             </a>
         </div> 
-        <h1 id=Pratt>Pratt</h1>
+        <h1 id="Pratt" class = "PrattHome"><a href= "PrattHub.html">Pratt</a></h1>
         <p>I don't have very much here yet because I am still in my first semester. But you can click <a href= "index.html">here</a> to see a pretty cool website I'm making for Information Technologies.</p>
         
         <p>Classes I am taking this semester:</p>
@@ -21,8 +21,11 @@
             <li>Foundations of Information</li>
         </ol>
         
+        <div class = "navbar">
+            <p><a id="NYU" class = "NYUHome" href= "NYU.html">NYU</a> <a id="Pratt" class = "PrattHome" href= "PrattHub.html">Pratt</a> </p>
+        </div>
         <footer>
-            © Micaela Yang 2024
+           © Micaela Yang 2024
         </footer>
     </body>
 
