--- a/NYUShowcase.html
+++ b/NYUShowcase.html
@@ -90,7 +90,7 @@
             <br><br><br>
         </div>
         <div class = "navbar">
-            <p>Jump to: <a id="NYU" class = "NYUHome" href= "NYU.html">NYU</a>, <a id="Pratt" class = "PrattHome" href= "PrattHub.html">Pratt</a> </p>
+            <p>Jump to: <a class = "NYUHome" href= "NYU.html">NYU</a>, <a class = "PrattHome" href= "PrattHub.html">Pratt</a> </p>
         </div>
         <footer>
             © Micaela Yang 2024
