--- a/NYUShowcase.html
+++ b/NYUShowcase.html
@@ -43,9 +43,12 @@
 
             <p>For my capstone project, I created a video game with a maze which could be navigated by audio only. Each game element played a musical loop to distinguish it. The gameplay video is currently unavailable. </p>
 
-            <table> <!-- Table for Capstone audio and their players-->
-                <th>Game Element</th>
-                <th>Associated audio</th>
+            <table> <!-- Table for Capstone audio and their players -->
+                <tr>
+                    <th>Game Element</th>
+                    <th>Associated audio</th>
+                </tr>
+                
                 <tr>
                     <td>BGM</td>
                      <td >
@@ -90,7 +93,7 @@
             <br><br><br>
         </div>
         <div class = "navbar">
-            <p>Jump to: <a class = "NYUHome" href= "NYU.html">NYU</a>, <a class = "PrattHome" href= "PrattHub.html">Pratt</a> </p>
+            <p>Jump to: <a class = "SiteHome" href = index.html> Home</a>, <a class = "NYUHome" href= "NYU.html">NYU</a>, <a class = "PrattHome" href= "PrattHub.html">Pratt</a> </p>
         </div>
         <footer>
             © Micaela Yang 2024
