--- a/PrattHub.html
+++ b/PrattHub.html
@@ -22,7 +22,7 @@
         </ol>
         
         <div class = "navbar">
-            <p>Jump to: <a class = "NYUHome" href= "NYU.html">NYU</a>, <a class = "PrattHome" href= "PrattHub.html">Pratt</a> </p>
+            <p>Jump to: <a class = "SiteHome" href = index.html> Home</a>, <a class = "NYUHome" href= "NYU.html">NYU</a>, <a class = "PrattHome" href= "PrattHub.html">Pratt</a> </p>
         </div>
         <footer>
            © Micaela Yang 2024
