--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <figure> 
                 <img src="Images/ME.png" alt = "A picture of Micaela" title= "Some random person's Pratt ID photo" width = 200 height = 200>
                 <figcaption>This is me!</figcaption>
-            </figure>
+            </figure> <!-- legal clarification: the photo is of me, posted with my full consent-->
             <p>
                 I graduated from NYU in 2020 with a Bachelor of Music in Music Technology. I am currently studying at Pratt Institute, getting my Master's degree in Library and Information Sciences. 
             </p>
